Patch - Forms: Fix misc asterisk disable class issues (#9902)
This is a follow-up to #9866 that fixes flaws identified in #9900.

Specifically:
* Build:
  * Bumped grunt-contrib-cssmin from v3.0.0 to v5.0.0 to make the "required-no-asterisk" class functional in minified CSS (via clean-css v5.1.2):
    * The older version stripped spaces out of selectors situated in pseudo-classes... which in turn caused ":not(.required-no-asterisk .required):before" to be transformed into ":not(.required-no-asterisk.required):before"
* Base forms SCSS:
  * Fixed right-to-left (RTL) support... prevents red "(required)" text from overlapping asterisks
* Form validation plugin demo page ("Examples using required fields without asterisks" section):
  * Removed redundant/non-functional "required-no-asterisk" class from label elements in the nickname/country name fields' code samples

Fixes #9900.

--- a/src/base/forms/_base.scss
+++ b/src/base/forms/_base.scss
@@ -53,9 +53,11 @@ legend,
 	label,
 	legend {
 		&.required {
-			&:before {
-				margin-left: auto;
-				margin-right: -$wb-forms-asterisk-width;
+			&:not(.required-no-asterisk .required) {
+				&:before {
+					margin-left: auto;
+					margin-right: -$wb-forms-asterisk-width;
+				}
 			}
 		}
 	}
